tests/integration/snapshots/integration__conformance__n_incomplete_false.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[fals]
stderr ---
error: unexpected character `f`. expected start of a json value
 --> stdin:1:2
  |
1 | [fals]
  |  ^
