tests/integration/snapshots/integration__conformance__n_incomplete_true.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[tru]
stdout ---

stderr ---
error: unexpected character `t`. expected start of a json value
 --> stdin:1:2
  |
1 | [tru]
  |  ^
