tests/integration/snapshots/integration__conformance__n_number_++.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[++1234]
stdout ---

stderr ---
error: unexpected character `+`. expected start of a json value
 --> stdin:1:2
  |
1 | [++1234]
  |  ^
